# xray-view-position-classifier

./: .flake8  .gitignore  .slugignore  Procfile  README.md  docker-compose.yml  heroku.yml  metadata_for_automl.csv  mount_csv.py  pyproject.toml  pytest.ini  requirements-complete.txt  requirements.txt
.github/workflows/: main.yml
pipeline_before_deploy/: model_card.md  model_cards.ipynb  xray_view_position_classifier.ipynb
pipeline_before_deploy/GCP_AutoML/: mount_csv_gcp_automl.py
tests/: classifier_test.py
tests/TestData/: request.json
xray_classifier_api/: Dockerfile  Procfile  classifier.py  docker-compose.yml  entrypoint.sh  flask_api.py  startup.py
