[tool.poetry]
name = "xray-view-position-classifier"
version = "0.1.0"
description = ""
authors = ["amandafbri <amanda.brinhosa@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
autokeras = "^1.0.12"
keras-tuner = "^1.0.2"
tensorflow-cpu = "^2.7.0"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
numpy = "^1.21.4"
Pillow = "^8.4.0"
requests = "^2.26.0"
Werkzeug = "^2.0.2"
wheel = "^0.37.0"
flask-restx = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
pytest-pythonpath = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
